# rankiq

./: Makefile  README.md  pyproject.toml  requirements.txt
deployment/docker/: Dockerfile  Dockerfile.ui  docker-compose.yml
deployment/k8s/: api-ui-deployment.yaml  qdrant-deployment.yaml  secrets.example.yaml
docs/adr/: ADR-001-vectorstore-strategy-pattern.md  ADR-002-hybrid-fusion-strategy.md  ADR-003-searchable-text-single-source.md  ADR-004-optional-cross-encoder-reranking.md  ADR-005-bm25-rebuild-strategy.md
docs/diagrams/: architecture.md
scripts/: sample_catalog.json  setup.sh
src/api/: dependencies.py  main.py
src/api/routes/: catalog.py  health.py  search.py
src/config/: settings.py
src/domain/: constants.py  exceptions.py  schemas.py
src/observability/: logging.py  metrics.py
src/services/embedding/: embedding_service.py
src/services/indexing/: pipeline.py
src/services/retrieval/: bm25_index.py  fusion.py  reranker.py  retrieval_service.py
src/services/storage/: sqlite_service.py
src/services/vectorstore/: base.py  factory.py  faiss_store.py  pgvector_store.py  qdrant_store.py
src/ui/: app.py
tests/: conftest.py
tests/e2e/: test_shopper_search_journey.py
tests/integration/: test_api_routes.py  test_indexing_retrieval_integration.py
tests/unit/: test_bm25_index.py  test_embedding_service.py  test_faiss_store.py  test_fusion.py  test_pgvector_store.py  test_qdrant_store.py  test_reranker.py  test_schemas.py  test_storage_service.py  test_vectorstore_factory.py
